<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BlueShak</string>

    <!--Network Static messages-->
    <string name="NetworkError">No Network Available</string>
    <string name="ServerError">Server Response Timeout</string>
    <string name="AuthFailedError">Server Authentication Failed</string>
    <string name="ParseError">Parsing Error</string>
    <string name="NoConnectionError">No Connection available to Host</string>
    <string name="TimeOutError">Server Timeout Error</string>
    <string name="ErrorResponseData">Error Response Data</string>
    <string name="ErrorEmailVerification">Please verify your email and try again. The email link was sent during registration.</string>
    <string name="no_items_found">No Items Found Near You</string>

    <string name="loading">Loading ...</string>
    <string name="myProfile">My Profile</string>

    <string name="support">Support</string>

    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="garageSale">My Sale</string>
    <string name="item">Item</string>

    <string name="sales_left">You can add up to 10 products per sale, 50 product left overall.</string>

    <string name="email">Email address</string>
    <string name="password">Password</string>


    <!--<string name="facebook_app_id">645536408947810</string>-->

    <!-- <string name="facebook_app_id">1753514361569070</string>-->

    <string name="facebook_app_id">133724250427239</string>

    <string name="chat_input_hint">Type a message</string>
    <string name="no_messages">No messages</string>

    <!-- Used in app/dialog examples -->
    <!-- Used in app/dialog examples -->
    <string-array name="select_dialog_items">
        <!-- <item>Click a picture from camera</item>-->
        <item>Camera</item>
        <item>Choose from gallery</item>
    </string-array>
    <!-- Used in app/dialog examples -->
    <string name="title_activity_reviews_ratings">Reviews</string>
    <string name="delete_item">Delete</string>
    <string name="mark_as_sold">Mark as sold</string>
    <string name="edit">Edit</string>
    <string name="delete_sale">Delete</string>
    <string name="edit_Sale">Edit My Sale</string>
    <string name="end_sale">Close My Sale</string>
    <string name="reschedule_sale">Reschedule My Sale</string>
    <string name="title_activity_terms_conditions">Help Center</string>
    <string name="title_activity_profile_edit">Profile Edit</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_list">List</string>
    <string name="title_activity_item_detail">Listing Details</string>
    <string name="title_activity_pick_location">Location</string>
    <string name="title_activity_report_listing">Report Listing</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_image_view_activty">Listing Details</string>
    <string name="title_activity_make_offers_activty">Make Offer</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="title_activity_book_mark_activty">My Wishlist</string>
    <string name="title_activity_filter">Filter</string>
    <string name="location_update_request">Please enable the GPS location to update the best products near you</string>
    <!--<string name="profile_edit_text">Become a verified user above- this shows other Blueshak you 're the real deal! Once verified, you'll receive a special avatar.</string>-->
    <!--<string name="profile_edit_text_next_line">Blueshak will only use your phone number or facebook details to verify your identity and we will not share them with anyone else.</string>-->
    <!-- <string name="zipcode_code">Use a Zipcode to confirm your location</string>-->
    <string name="list_item">Sell An Item</string>
    <string name="create_sale">Create a Sale</string>
    <string name="item_updated_message">Item has been updated Successfully.</string>
    <string name="title_activity_my_items">Add Items</string>
    <string name="title_activity_chat_activty">ChatActivty</string>
    <string name="title_activity_view">Image</string>
    <string name="title_activity_add_rating">Review</string>
    <string name="title_activity_my_listings">My Listings</string>
    <string name="title_activity_garage_sales_list">GarageSalesList</string>
    <string name="title_activity_currency">CurrencyActivity</string>

    <string name="marked_inappropriate_success_message">Item marked as inappropriate. Thank you for your help. We will review your submission.</string>

    <string name="contact_permission_text">Get accounts and Read contacts Services Permission required for this app</string>
    <string name="settings">settings</string>
    <string name="otp_text">We have sent you verification code to verify your phone number</string>
    <string name="otp_resend_text">Didn\'t receive one? Resend verification code.</string>


    <!-- UTIL-->
    <string name="please_check_ur_internet">Please check your internet connection</string>
    <!-- item_list_fragment_for_list-->
    <string name="item_list_fragment_for_list_result_from_nearest">Results from Newly Listed</string>
    <string name="item_list_fragment_for_list_result_from_nearest_new">Nearest First</string>
    <string name="item_list_fragment_for_list_result_from_nearest_seller">Nearest Seller</string>
    <string name="filter_newly_listed_item">Newly Listed</string>
    <string name="filter_newest_seller">Newest Seller</string>
    <string name="nearest_first">Nearest First</string>
    <string name="newly_listed">Newly Listed</string>
    <string name="item_list_fragment_for_list_result_in">Results from</string>

    <!-- PROFILE-->
    <string name="profile_edit">Edit</string>
    <string name="profile_my_items">My Items</string>
    <string name="profile_my_bookmarks">My Bookmarks</string>
    <string name="profile_my_shops">My Shop</string>
    <string name="profile_app">App</string>
    <string name="profile_listing">Listings</string>
    <string name="profile_contact_support">Contact Support</string>
    <string name="profile_rate_app">Rate App</string>
    <string name="profile_share">Share</string>
    <string name="profile_privacy_policy">Privacy Policy</string>
    <string name="profile_term_condition">Terms and conditions</string>
    <string name="profile_term_logout">Logout</string>
    <string name="profile_otp_sent_succ">OTP Send Successfully</string>
    <string name="profile_already_authenticate">Already Authenticated</string>
    <string name="profile_already_retry">Retry</string>
    <string name="profile_read_review">Read reviews</string>
    <string name="profile_ph">Ph:</string>
    <string name="profile_are_ur_sure">Are you sure?</string>
    <string name="profile_ok">Ok</string>
    <string name="profile_cancel">Cancel</string>
    <string name="profile_your_contact">(Your contact info is visible to others)</string>
    <string name="copy_right_text">Copyright BlueShak Pty Ltd. Version: 1.3</string>

    <!--25Nov -->
    <string name="upload_upto_five">Upload up to 5 photos</string>
    <string name="upload_photo_description">Tab a photo to edit or delete\nHold and Drag to reorder photos</string>
    <string name="title_activity_add_images">Add Images</string>
    <string name="add_new_picture">Add New Picture(s)</string>
    <string name="items">Items:</string>
    <string name="listed">Listed:</string>
    <string name="seller_items">Seller Items</string>
    <string name="feature_items">Featured Items</string>
    <string name="title_activity_successful">Successful</string>
    <string name="successful_title">Item Listing Successful!</string>
    <string name="successful_description">Your item has been listed and in now live!</string>
    <string name="successful_another"><u>List Another Item</u></string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="pay_pal_label">Pay with PayPal</string>
    <string name="your_items">Your item ?</string>
    <string name="feature_item_sell_description">Want to sell faster? We a have a low-cost option-for only US$0.99/wk,
        you can have your item(s) featured on top.</string>
    <string name="week_one">1 week for USD 0.99</string>
    <string name="week_two">2 weeks for USD 1.90 (USD 0.95/wk)</string>
    <string name="week_three">3 weeks for USD 2.70(USD 0.90/wk)</string>
    <string name="week_four">4 weeks for USD 3.40(USD 0.85/wk)</string>

    <string name="ending_first">Ending first</string>
    <string name="only_new_items">Only New Items</string>
    <string name="only_negotiable_items">Only Negotiable Items</string>
    <string name="highest_to_lowest_price">Highest to Lowest Price</string>
    <string name="lowest_to_highest_price">Lowest to Highest Price</string>
    <string name="only_sales_items">Only Sales Items</string>
    <string name="done">Done</string>
    <string name="error_message">An error occurred. Check your internet connection and try again.</string>
    <string name="payment_id_empty">Can\'t able to pay becasue item product_id is missing. Try again to create this item.</string>
    <string name="option_selection">For feature your item, select any of the option.</string>
    <string name="only_free_items">Only Free Items</string>
    <string name="listed_label">Listed</string>
    <string name="read_review">Read Review</string>
    <string name="read_reviews">Read Reviews</string>
    <string name="seller_description">Sales Description:</string>

    <string name="member_since">Member Since:</string>
    <string name="item_sold">Number of Item Sold:</string>
    <string name="average_rating">Average Rating:</string>
    <string name="seller_details">Seller Details</string>
    <string name="seller_listing">Seller Listings</string>
    <string name="seller_review">Seller Reviews</string>
    <string name="edit_seller">Edit Seller</string>


</resources>
